--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             <div class="cols image-delete">
                 <div class="image">
-                    <img src="https://pbs.twimg.com/media/FfhkDtjWQAMYNrc.jpg"" alt="" >
+                    <img src="https://pbs.twimg.com/media/FfhkDtjWQAMYNrc.jpg" alt="" >
            </div> </div>
         </div>
     </div>
